app/seats/base/seat-listener-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/gnunn1/seating
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"seat-listener:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"seat-listener\")].image"}]'
    app.openshift.io/connects-to: seatsdb
  labels:
    app: seats
    app.kubernetes.io/component: service
    app.kubernetes.io/instance: seat-listener
    app.kubernetes.io/name: seat-listener
    app.kubernetes.io/part-of: seats
    app.openshift.io/runtime: camel
    app.openshift.io/runtime-version: "8"
    fuse-prometheus: "true"
  name: seat-listener
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: seat-listener
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: seat-listener
        deploymentconfig: seat-listener
        fuse-prometheus: "true"
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/seating/seat-listener
        imagePullPolicy: Always
        name: seat-listener
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        - containerPort: 8081
          protocol: TCP
          name: jolokia
        - containerPort: 9779
          protocol: TCP
          name: prometheus
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
