app/seats/base/seat-ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/gnunn1/seating
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"seat-ui:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"seat-ui\")].image"}]'
    app.openshift.io/connects-to: seat-reader
  labels:
    app: seats
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: seat-ui
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: seats
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "10"
  name: seat-ui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: seat-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: seat-ui
        deploymentconfig: seat-ui
    spec:
      containers:
      - env:
        - name: ROUTE_HOSTNAME
          value: seat-reader-seating.apps.cluster.example.com
        image: image-registry.openshift-image-registry.svc:5000/seating/seat-ui
        imagePullPolicy: Always
        name: seat-ui
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
