app/seats/base/seat-listener-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: database
  labels:
    app: seats
    app.kubernetes.io/component: service
    app.kubernetes.io/instance: seat-listener
    app.kubernetes.io/name: seat-listener
    app.kubernetes.io/part-of: seats
    app.openshift.io/runtime: camel
    app.openshift.io/runtime-version: "8"
  name: seat-listener
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: seat-listener
    deploymentconfig: seat-listener
  sessionAffinity: None
  type: ClusterIP
