app/seats/base/seat-reader-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: database
  labels:
    app: seats
    app.kubernetes.io/component: service
    app.kubernetes.io/instance: seat-reader
    app.kubernetes.io/name: seat-reader
    app.kubernetes.io/part-of: seats
    app.openshift.io/runtime: camel
    fuse-prometheus: "true"
  name: seat-reader
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: jolokia
    port: 8081
    protocol: TCP
    targetPort: 8081
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  - name: prometheus
    port: 9779
    protocol: TCP
    targetPort: 9779
  selector:
    app: seat-reader
    deploymentconfig: seat-reader
  sessionAffinity: None
  type: ClusterIP
