app/seats/base/seat-request-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: seats
    app.kubernetes.io/component: service
    app.kubernetes.io/instance: seat-request
    app.kubernetes.io/name: seat-request
    app.kubernetes.io/part-of: seats
    app.openshift.io/runtime: camel
  name: seat-request
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: seat-request
    deploymentconfig: seat-request
  sessionAffinity: None
  type: ClusterIP
