app/seats/base/seat-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/gnunn1/seating
  labels:
    app: seats
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: seat-ui
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: seats
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "10"
  name: seat-ui
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: seat-ui
    deploymentconfig: seat-ui
  sessionAffinity: None
  type: ClusterIP
