app/seats/base/seat-reader-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: seats
    app.kubernetes.io/component: service
    app.kubernetes.io/instance: seat-reader
    app.kubernetes.io/name: seat-reader
    app.kubernetes.io/part-of: seats
    app.openshift.io/runtime: camel
  name: seat-reader
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: seat-reader
    weight: 100
  wildcardPolicy: None
