app/seats/base/seat-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: seats
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: seat-ui
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: seats
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "10"
  name: seat-ui
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: seat-ui
    weight: 100
  wildcardPolicy: None
